# SimpleMath

./: .color_coded  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh
include/: Math.h
include/Math/: Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  Quaternion.h  Single.h  Vector2.h  Vector3.h  Vector4.h
include/Math/Entity/: Matrix4x4.h  Quaternion.h
include/Math/Matrix2x2/: Function.h  Hash.h  Operator.h
include/Math/Matrix3x3/: Function.h  Hash.h  Operator.h
include/Math/Matrix4x4/: Function.h  Hash.h  Operator.h
include/Math/Quaternion/: Function.h  Hash.h  Operator.h
include/Math/System/: Render.h
source/: CMakeLists.txt
test/: CMakeLists.txt
test/Math/: Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
test/Math/Entity/: Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
test/Math/Entity/Matrix2x2/: Function.cpp  Operator.cpp
test/Math/Entity/Matrix3x3/: Function.cpp  Operator.cpp
test/Math/Entity/Matrix4x4/: Function.cpp  Operator.cpp
test/Math/Entity/Quaternion/: Function.cpp  Operator.cpp
test/Math/Entity/Vector2/: Function.cpp  Operator.cpp
test/Math/Entity/Vector3/: Function.cpp  Operator.cpp
test/Math/Entity/Vector4/: Function.cpp  Operator.cpp
test/Math/Matrix2x2/: Function.cpp  Operator.cpp
test/Math/Matrix3x3/: Function.cpp  Operator.cpp
test/Math/Matrix4x4/: Function.cpp  Operator.cpp
test/Math/Quaternion/: Function.cpp  Operator.cpp
test/Math/Vector2/: Function.cpp  Operator.cpp
test/Math/Vector3/: Function.cpp  Operator.cpp
test/Math/Vector4/: Function.cpp  Operator.cpp
(+35 files in other folders)
